[package]
name = "scout"
version = "0.2.10"
edition = "2021"
license = "MIT"
description = "Scout is a simple Rust CLI to scan a directory to list files, recursively."
homepage = "https://github.com/ewilan-riviere/scout"
repository = "https://github.com/ewilan-riviere/scout"
readme = "README.md"
keywords = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
chrono = "0.4"
