[package]
name = "scout-seeker"
version = "0.2.11"
edition = "2021"
license = "MIT"
description = "scout-seeker is a simple Rust CLI to scan a directory to list files, recursively."
homepage = "https://github.com/ewilan-riviere/scout-seeker"
repository = "https://github.com/ewilan-riviere/scout-seeker"
readme = "README.md"
keywords = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
chrono = "0.4"
